# sdk

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: agent_chat_engine.md
examples/: stream_chat.py
protos/agent-chat-engine/v1/: agent_chat_engine.proto
protos/google/protobuf/: descriptor.proto  timestamp.proto
protos/microcommon/v1/: common.proto
scripts/: protoc_python.sh  replace-import-path.sh
sdk/pb/agent_chat_engine/v1/: agent_chat_engine_pb2.py  agent_chat_engine_pb2.pyi  agent_chat_engine_pb2_grpc.py
sdk/pb/google/api/: annotations_pb2.py
sdk/pb/google/protobuf/: descriptor_pb2.py  descriptor_pb2_grpc.py  timestamp_pb2.py  timestamp_pb2_grpc.py
sdk/pb/microcommon/v1/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py
